[workspace]
members = [
  "benchmarks/runqueue/bench_*",
  "benchmarks/bench_*",
  "bench-multicore",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Elena Frank <elena.frank@proton.me>"]

[workspace.dependencies]
bench-multicore = { path = "bench-multicore" }

ariel-os = { git = "https://github.com/ariel-os/ariel-os", features = [
  "bench",
] }
ariel-os-boards = { git = "https://github.com/ariel-os/ariel-os" }
ariel-os-embassy = { git = "https://github.com/ariel-os/ariel-os" }
ariel-os-runqueue = { git = "https://github.com/ariel-os/ariel-os" }

embassy-embedded-hal = { version = "0.2.0", default-features = false }
embassy-executor = { version = "0.6.3", default-features = false }
embassy-futures = { version = "0.1.1", default-features = false }
embassy-hal-internal = { version = "0.2.0", default-features = false }
embassy-net = { version = "0.5", default-features = false }
embassy-net-driver-channel = { version = "0.3.0", default-features = false }
embassy-nrf = { version = "0.2", default-features = false }
embassy-rp = { version = "0.2", default-features = false }
embassy-stm32 = { version = "0.1", default-features = false }
embassy-sync = { version = "0.6.1", default-features = false }
embassy-time = { version = "0.3.2", default-features = false }
embassy-time-driver = { version = "0.1.0", default-features = false }
embassy-usb = { version = "0.3.0", default-features = false }

esp-hal = { version = "0.21.1", default-features = false }
xtensa-lx-rt = { version = "0.17" }

critical-section = { version = "1.1", default-features = false }
defmt = { version = "0.3.7" }

[workspace.lints.rust]
# ... until we figure out a way to generate a list of all used cfg variables
# across build configurations ...
unexpected_cfgs = "allow"


[patch.crates-io]
# ariel-os embassy fork
embassy-executor = { git = "https://github.com/ariel-os/embassy", branch = "for-ariel-os-2024-11-28" }
embassy-executor-macros = { git = "https://github.com/ariel-os/embassy", branch = "for-ariel-os-2024-11-28" }
embassy-hal-internal = { git = "https://github.com/ariel-os/embassy", branch = "for-ariel-os-2024-11-28" }
embassy-nrf = { git = "https://github.com/ariel-os/embassy", branch = "for-ariel-os-2024-11-28" }
embassy-net = { git = "https://github.com/ariel-os/embassy", branch = "for-ariel-os-2024-11-28" }
embassy-rp = { git = "https://github.com/ariel-os/embassy", branch = "for-ariel-os-2024-11-28" }
embassy-net-driver = { git = "https://github.com/ariel-os/embassy", branch = "for-ariel-os-2024-11-28" }
embassy-net-driver-channel = { git = "https://github.com/ariel-os/embassy", branch = "for-ariel-os-2024-11-28" }
embassy-stm32 = { git = "https://github.com/ariel-os/embassy", branch = "for-ariel-os-2024-11-28" }
embassy-sync = { git = "https://github.com/ariel-os/embassy", branch = "for-ariel-os-2024-11-28" }
embassy-time-driver = { git = "https://github.com/ariel-os/embassy", branch = "for-ariel-os-2024-11-28" }
embassy-time-queue-driver = { git = "https://github.com/ariel-os/embassy", branch = "for-ariel-os-2024-11-28" }
embassy-usb-driver = { git = "https://github.com/ariel-os/embassy", branch = "for-ariel-os-2024-11-28" }
embassy-usb-synopsys-otg = { git = "https://github.com/ariel-os/embassy", branch = "for-ariel-os-2024-11-28" }
cyw43 = { git = "https://github.com/ariel-os/embassy", branch = "for-ariel-os-2024-11-28" }
cyw43-pio = { git = "https://github.com/ariel-os/embassy", branch = "for-ariel-os-2024-11-28" }

# ariel-os esp-hal fork
esp-alloc = { git = "https://github.com/ariel-os/esp-hal", branch = "for-ariel-os-2024-10-16-0.21.1-pr2377" }
esp-hal = { git = "https://github.com/ariel-os/esp-hal", branch = "for-ariel-os-2024-10-16-0.21.1-pr2377" }
esp-hal-embassy = { git = "https://github.com/ariel-os/esp-hal", branch = "for-ariel-os-2024-10-16-0.21.1-pr2377" }
esp-println = { git = "https://github.com/ariel-os/esp-hal", branch = "for-ariel-os-2024-10-16-0.21.1-pr2377" }
esp-wifi = { git = "https://github.com/ariel-os/esp-hal", branch = "for-ariel-os-2024-10-16-0.21.1-pr2377" }
esp-storage = { git = "https://github.com/ariel-os/esp-hal", branch = "for-ariel-os-2024-10-16-0.21.1-pr2377" }
