[package]
name = "bench_async"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
bench-multicore = { workspace = true }

ariel-os = { workspace = true, features = ["time"] }
ariel-os-embassy = { workspace = true, features = ["time"] }
ariel-os-boards = { workspace = true }

critical-section = { workspace = true }
embassy-executor = { workspace = true }
embassy-time = { workspace = true }

[features]
dual-core = []
multicore-v1 = []
multicore-v2 = []
