[package]
name = "bench_busy_poll"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
riot-rs = { workspace = true }
riot-rs-boards = { workspace = true }
riot-rs-rt = { workspace = true }

embassy-executor = { workspace = true }
embassy-time = { workspace = true }
embassy-time-driver = { workspace = true }

[features]
poll = []
await = []
single-core = []
multicore = []
multicore-v1 = []
multicore-v2 = []
affinity = []
