[package]
name = "bench_busy_poll"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
bench-multicore = { workspace = true }

ariel-os = { workspace = true, features = ["time"] }
ariel-os-boards = { workspace = true }

embassy-executor = { workspace = true }
embassy-futures = { workspace = true }
embassy-time = { workspace = true }
embassy-time-driver = { workspace = true }

[features]
dual-core = []
reallocation = []
affinity = []
poll = []
await = ["ariel-os/time"]
