[package]
name = "bench_fib"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
bench-multicore = { workspace = true }

riot-rs = { workspace = true }
riot-rs-boards = { workspace = true }

[features]
single-core = []
dual-core = []
multicore-v1 = []
multicore-v2 = []
none = []
fib = []
loop = []
