[package]
name = "bench_fib"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
bench-multicore = { workspace = true }

ariel-os = { workspace = true }
ariel-os-boards = { workspace = true }

[features]
dual-core = []
multicore-v1 = []
multicore-v2 = []
none = []
fib = []
loop = []
