[package]
name = "bench_sched_yield_t"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
riot-rs = { workspace = true }
riot-rs-boards = { workspace = true }

[features]
single-core = []
dual-core = []
multicore-v1 = []
multicore-v2 = []
t1 = []
t2 = []
t3 = []
t4 = []
