[package]
name = "bench_spinlocks"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
riot-rs = { workspace = true }
riot-rs-boards = { workspace = true }

[features]
single-core = []
dual-core = []
multicore-v1 = []
multicore-v2 = []

noop = []
cs = []
atomic = []
atomic-rw = []
hardware = []
