[package]
name = "bench_spinlocks"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
bench-multicore = { workspace = true }

riot-rs = { workspace = true }
riot-rs-boards = { workspace = true }

[features]
dual-core = []
multicore-v1 = []
multicore-v2 = []

noop = []
cs = []
atomic = []
hardware = []
