[package]
name = "bench_thread_flags"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
riot-rs = { workspace = true }
riot-rs-boards = { workspace = true }

[features]
multicore = []
multicore-v1 = []
# multicore-v2 = []
multicore-v2 = [ "riot-rs/core-affinity" ]
