[package]
name = "bench_thread_flags"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
bench-multicore = { workspace = true }

ariel-os = { workspace = true }
ariel-os-boards = { workspace = true }

embassy-executor = { workspace = true }

[features]
dual-core = []
reallocation = []
