[package]
name = "bench_runqueue_add"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
riot-rs.workspace = true
riot-rs-runqueue.workspace = true
riot-rs-boards.workspace = true

cortex-m.workspace = true

[features]
single-core = []
multicore = []
multicore-v1 = []
multicore-v2 = []
