[package]
name = "bench_runqueue_get_next"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
bench-multicore = { workspace = true }

ariel-os = { workspace = true }
ariel-os-runqueue = { workspace = true }
ariel-os-boards = { workspace = true }

[features]
dual-core = []
reallocation = []
