[package]
name = "bench_runqueue_reallocate"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
bench-multicore = { workspace = true }

ariel-os = { workspace = true }
ariel-os-runqueue = { workspace = true }
ariel-os-boards = { workspace = true }

[features]
dual-core = []
reallocation = []
